--- a/app/build.gradle
+++ b/app/build.gradle
@@ -30,6 +30,7 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:1.0.2'
     compile 'com.android.support:support-v4:25.3.1'
     compile 'com.android.support:support-vector-drawable:25.3.1'
+    compile 'de.hdodenhof:circleimageview:2.1.0'
     testCompile 'junit:junit:4.12'
 }
 
@@ -42,36 +43,25 @@ dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
 }
 dependencies {
-    compile 'com.android.support.constraint:constraint-layout:+'
-}
-
-dependencies {
     compile 'com.google.firebase:firebase-auth:10.0.1'
 }
 dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
 }
-dependencies {
-    compile 'com.android.support.constraint:constraint-layout:+'
-}
-dependencies {
-    compile 'com.android.support.constraint:constraint-layout:+'
-}
+
 dependencies {
     compile 'com.android.support:support-v4:25.+'
     compile 'com.android.support:support-vector-drawable:25.+'
 }
-dependencies {
-    compile 'com.android.support:support-v4:25.+'
-    compile 'com.android.support:support-vector-drawable:25.+'
-}
+
 dependencies {
     compile 'com.android.support:support-v4:25.+'
 }
+
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.android.support.constraint:constraint-layout:+'
 }
 dependencies {
-    compile 'com.android.support:support-v4:25.+'
+    compile 'com.google.firebase:firebase-database:10.0.1'
 }
 apply plugin: 'com.google.gms.google-services'
