--- a/app/build.gradle
+++ b/app/build.gradle
@@ -38,9 +38,13 @@ dependencies {
 
 dependencies {
     compile fileTree(dir: 'libs', include: ['*.jar'])
+    compile 'com.android.support:support-v4:25.4.0'
+    compile 'com.android.support:recyclerview-v7:25.4.0'
     compile 'net.objecthunter:exp4j:0.4.4'
     compile 'com.google.firebase:firebase-database:11.0.2'
     compile 'com.google.firebase:firebase-storage:11.0.2'
     compile 'com.google.firebase:firebase-auth:11.0.2'
+    compile 'com.firebaseui:firebase-ui-database:2.1.1'
+
 }
 apply plugin: 'com.google.gms.google-services'
