--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -37,8 +37,11 @@
         <activity
             android:name="com.theartofdev.edmodo.cropper.CropImageActivity"
             android:theme="@style/Base.Theme.AppCompat" />
-        <activity android:name=".UsersActivity" android:parentActivityName=".MainActivity"
+        <activity
+            android:name=".UsersActivity"
+            android:parentActivityName=".MainActivity"
             tools:targetApi="jelly_bean" />
+        <activity android:name=".OtherProfileActivity"></activity>
     </application>
 
 </manifest>
