--- a/app/build.gradle
+++ b/app/build.gradle
@@ -53,4 +53,7 @@ dependencies {
 dependencies {
     compile 'com.android.support.constraint:constraint-layout:+'
 }
+dependencies {
+    compile 'com.google.firebase:firebase-messaging:11.0.2'
+}
 apply plugin: 'com.google.gms.google-services'
