Implement Presence system for chat

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -55,7 +55,9 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity"></activity>
+        <activity android:name=".ChatActivity" android:parentActivityName=".MainActivity"
+            tools:targetApi="jelly_bean">
+        </activity>
     </application>
 
 </manifest>
