--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,10 +27,10 @@
         </service>
 
         <activity
-            android:screenOrientation="portrait"
             android:name=".MainActivity"
             android:label="@string/app_name"
             android:launchMode="singleTop"
+            android:screenOrientation="portrait"
             android:theme="@style/AppTheme.NoActionBar" />
         <activity android:name=".LoginActivity">
             <intent-filter>
@@ -56,9 +56,11 @@
                 <category android:name="android.intent.category.DEFAULT" />
             </intent-filter>
         </activity>
-        <activity android:name=".ChatActivity" android:parentActivityName=".MainActivity"
-            tools:targetApi="jelly_bean">
-        </activity>
+        <activity
+            android:name=".ChatActivity"
+            android:parentActivityName=".MainActivity"
+            tools:targetApi="jelly_bean"></activity>
+        <activity android:name=".note.EditNoteActivity"></activity>
     </application>
 
 </manifest>
